add responsive to the landing page

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -4,8 +4,9 @@ $mainFont : 'Poppins', sans-serif;
 
 // FONT SIZES 
 
-$fontSizeS: 0;
-$fontSizeM: 18px;
-$fontSizeL: 24px ;
-$fontSizeXL: 0;
+$fontSizeXS: 14px;
+$fontSizeS: 18px;
+$fontSizeM: 24px;
+$fontSizeL: 36px;
+$fontSizeXL: 48px;
 $fontSizeXXL: 60px;
