--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,11 +7,12 @@
     display: flex;
 
     .logo {
+        margin-left: 30px;
         color: $maintxtColor;
         text-decoration: none;
         letter-spacing: 3px;
         font-weight: 600;
-        font-size: $fontSizeL;
+        font-size: $fontSizeM;
         display: flex;
         align-items: center;
         &Img {
