--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,3 +1,10 @@
 $mainColor: rgb(86, 154, 233);
-$maintxtColor : white;
-$secondarytxtColor : rgba(240,244,247,.6)
+$mainColorDarker: rgb(45, 80, 119);
+$secondaryColor: #E9C056;
+
+$mainTxtColor : rgb(39, 39, 39);
+$mainLightTxtColor : white;
+$secondaryLightTxtColor : rgba(255,255,255,.6);
+
+$lightBg: #f2f2f2;
+$darkBg: linear-gradient(90deg, rgba(6,21,47,1) 0%, rgba(6,21,47,0.95) 77%, rgba(6,21,47,0.97) 100%) no-repeat;
