--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,9 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@600&family=Poppins&display=swap');
+
+@font-face {
+    font-family: GilroyBold;
+    src: url('../assets/fonts/Gilroy/Gilroy-ExtraBold.otf');
+};
+
+@font-face {
+    font-family: GilroyLight;
+    src: url('../assets/fonts/Gilroy/Gilroy-Light.otf');
+};
+
 $mainFont : 'Poppins', sans-serif;
+$secondaryFontBold : 'GilroyBold', sans-serif;
+$secondaryFontLight : 'GilroyLight', sans-serif;
+$thirdFont : 'Fraunces', serif;
 
 // FONT SIZES 
 
+$fontSizeXXS: 12px;
 $fontSizeXS: 14px;
 $fontSizeS: 18px;
 $fontSizeM: 24px;
