--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,4 +1,5 @@
 @import './fonts';
+@import './colors';
 
 * {
     margin: 0;
@@ -6,8 +7,25 @@
 }
 
 body {
-    background: linear-gradient(90deg, rgba(6,21,47,1) 0%, rgba(6,21,47,0.9360119047619048) 77%, rgba(6,21,47,0.9248074229691877) 100%);
     max-width: 1440px;
+    min-height: 100vh;
     margin: auto;
-    height: 100vh;
+    background: $lightBg;
+}
+
+.darkBg {
+    background: $darkBg;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px rgb(221, 230, 245) inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
