--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -3,7 +3,8 @@
 @import '../../styles/animations.scss'; 
 @import '../../styles/mixins';
 
-.signupCtn {
+
+.loginCtn {
     width: auto;
     height: auto;
     @include flexCenter;
@@ -31,7 +32,7 @@
     margin: 30px 0 50px 0;
 }
 
-.SignupForm {  
+.LoginForm {  
     width: 90%;
     margin: 0 20px;
     display: grid;
@@ -40,20 +41,15 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 
         "legend legend"
-        "member member"
-        "prenom prenom"
-        "nom nom"
+        "notAMember notAMember"
         "email email"
         "password password"
-        "agreeTerms agreeTerms"
         "submit ."
     ;
 
-
     .legend {grid-area: legend;}
-
-    .alreadyMember {
-        grid-area: member;
+    .notAMember {
+        grid-area: notAMember;
         font-size: $fontSizeXXS;
         color: grey;
         margin-top: -10px;
@@ -68,28 +64,8 @@
             margin-top: 30px;
         }
     }
-
-    .prenom {grid-area: prenom;}
-    .nom {grid-area: nom;}
     .email {grid-area: email;}
     .password {grid-area: password;}
-    .agreeTerms {
-        grid-area: agreeTerms;
-        position: relative;
-        & label {
-            margin-left: 18px;
-            font-size: $fontSizeXS;
-            font-weight: 500;
-            letter-spacing: .1;
-        }
-        & input {
-            position: absolute;
-            left: 0;
-            top: -2px;
-            width: auto;
-        }
-        & a {color: $mainColor;}
-    }
     .submit {
         cursor: pointer;
         @include btn;
@@ -103,17 +79,8 @@
 
 @media screen and (min-width: 769px) {
 
-    .SignupForm {
+    .LoginForm {
         width: 400px;
-        grid-template-areas: 
-            "legend legend"
-            "member member"
-            "prenom nom"
-            "email email"
-            "password password"
-            "agreeTerms agreeTerms"
-            "submit ."
-        ;
     }
 }
 
@@ -123,7 +90,7 @@
         display: none;
     }
 
-    .signupCtn {
+    .loginCtn {
         margin-left: 515px;
         height: 100%;
     }
