--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -86,6 +86,10 @@
 
 @media screen and (min-width: 1024px) {
 
+    .logoIllustration {
+        margin-top: -150px;
+    }
+
     .headerMobile {
         display: none;
     }
