--- a/front/src/components/Header/Header.scss
+++ b/front/src/components/Header/Header.scss
@@ -74,18 +74,14 @@
 
                 .user {
                     padding-bottom: 0;
-                    .name {font-weight: 600;}
-                    .nickname {
-                        color: $secondaryTxtColor;
-                        font-size: 11px;
-                    }
+                    .name {font-weight: 600;margin: 5px 0;}
                     &::after {
                         content: '';
                         display: block;
                         width: 100%;
                         height: 1px;
                         background: rgba(128, 128, 128, 0.164);
-                        margin-top: 10px;
+                        margin-top: 15px;
                     }
                 }
 
