add modify post functions

--- a/front/src/views/User/User.scss
+++ b/front/src/views/User/User.scss
@@ -19,6 +19,9 @@
                 border-radius: 500px;
                 background: grey;
                 margin: 15px 0;
+                @include flexCenter;
+                color: white;
+                font-size: 50px;
             }
             .name {font-size: $fontSizeL;}
             .nickname {color: $secondaryTxtColor;}
