--- a/front/src/components/SignupForm/SignupForm.scss
+++ b/front/src/components/SignupForm/SignupForm.scss
@@ -46,6 +46,7 @@
         "email email"
         "password password"
         "agreeTerms agreeTerms"
+        "errors errors"
         "submit ."
     ;
 
@@ -90,6 +91,18 @@
         }
         & a {color: $mainColor;}
     }
+    .errors {
+        grid-area: errors;
+        & * {
+            font-size: $fontSizeXS;
+            color: rgb(199, 94, 89);
+            background: rgb(255, 227, 227);
+            margin: 10px 0;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid rgb(199, 94, 89);
+        }
+    }
     .submit {
         cursor: pointer;
         @include btn;
@@ -112,6 +125,7 @@
             "email email"
             "password password"
             "agreeTerms agreeTerms"
+            "errors errors"
             "submit ."
         ;
     }
