--- a/front/src/views/User/User.scss
+++ b/front/src/views/User/User.scss
@@ -8,7 +8,8 @@
         .userHeader {
             margin: auto;
             background: white;
-            width: 80%;
+            width: 95%;
+            max-width: 700px;
             margin-top: 114px;
             @include flexCenter;
             flex-direction: column;
@@ -40,4 +41,10 @@
 
         }
     }
+}
+
+.postsContainer {
+    width: 95%;
+    max-width: 700px;
+    margin: 40px auto;
 }
