--- a/front/src/components/Post/Post.scss
+++ b/front/src/components/Post/Post.scss
@@ -7,7 +7,7 @@
     border-radius: 5px;
     margin: 20px 0;
     padding: 20px;
-    // position: relative;
+    position: relative;
     .userInfos {
         @include flexCenter;
         justify-content: flex-start;
@@ -28,21 +28,41 @@
             color: grey;
         }
     }
-    .deleteBtn {
-        // position: absolute;
-        // top: 5px;
-        // right: 5px;
-        width: 20px;
-        height: 20px;
-        background: red;
-        color: white;
+    .deleteModifyCtn {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        display: flex;
+    }
+    .modifyBtn {
+        width: 25px;
+        height: 25px;
+        background: $mainColor;
         border: none;
-        @include flexCenter;
+        border-radius: 50px;
+        cursor: pointer;
+        margin-right: 5px;
+        background-image: url('../../assets/img/edit.ico');
+        background-size: 50%;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    .deleteBtn {
+        width: 25px;
+        height: 25px;
+        background: none;
+        background-image: url('../../assets/img/delete.png');
+        background-size: 95%;
+        background-repeat: no-repeat;
+        background-position: center;
+        border: none;
         border-radius: 5px;
         cursor: pointer;
     }
-    .inputMessage {
-        width: 100%;
+    .confirmModifBtn {
+        @include btn;
+        width: 100px;
+        cursor: pointer;
     }
 }
 
