--- a/front/src/components/Post/Post.scss
+++ b/front/src/components/Post/Post.scss
@@ -4,7 +4,7 @@
 
 .Post {
     background: white;
-    border-radius: 5px;
+    border-radius: 3px;
     margin: 20px 0;
     padding: 20px;
     position: relative;
@@ -63,6 +63,26 @@
         @include btn;
         width: 100px;
         cursor: pointer;
+    }
+    .commentsTitle {
+        margin-top: 40px;
+    }
+    .postComment {
+        display: flex;
+        margin-top: 10px;
+        &Txt {
+            width: 100%;
+            border: none;
+            background: #f2f2f2;
+            padding: 5px;
+        }
+        &Btn {
+            @include btn;
+            width: 100px;
+            margin: 0;
+            margin-left: 10px;
+            cursor: pointer;
+        }
     }
 }
 
