--- a/front/src/views/User/User.scss
+++ b/front/src/views/User/User.scss
@@ -24,7 +24,13 @@
                 color: white;
                 font-size: 50px;
             }
-            .name {font-size: $fontSizeL;}
+            #name {
+                font-size: $fontSizeL;
+                display: flex;
+                #firstName{
+                    margin-right: 10px;
+                }
+            }
             .nickname {color: $secondaryTxtColor;}
             .email {
                 margin-top: 15px;
@@ -34,9 +40,14 @@
             }
             .editProfile {
                 @include btn;
+                @include flexCenter;
+                letter-spacing: .8px;
                 border: none;
                 font-size: $fontSizeXS;
                 margin: 20px 0;
+                padding: 10px;
+                width: 150px;
+                cursor: pointer;
             }
 
         }
