handle images upload / modify / delete

--- a/front/src/components/Header/Header.scss
+++ b/front/src/components/Header/Header.scss
@@ -3,9 +3,7 @@
 @import '../../styles/mixins';
 
 .Header {
-    position: fixed;
-    left: 0;
-    top: 0;
+    margin-bottom: 20px;
     height: 50px;
     width: 100%;
     background: white;
